--- a/alliance.html
+++ b/alliance.html
@@ -5,13 +5,14 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.a9622138.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.eadc6beb.js">
+		<link href="./_app/immutable/assets/0.88b7e876.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bbf8a3f5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.2ed5b141.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.08b20048.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.58fa070e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.363c6edd.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.9a322bcb.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3eaefac.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0e7319be.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.9c19034e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.9f965bd3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.2214833c.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -22,7 +23,7 @@
 <div id="isMain" class="loading"><header class="px-4 py-2 md:px-6 fixed bg-[#e9e9e1] w-full z-50 shadow-sm"><nav class="flex lg:justify-center"><div class="self-center lg:ml-6 flex justify-between w-full lg:inline-block lg:w-auto menunav--hidden" id="menunav"><a href="/" class="hover:text-[#817c52] w-11 h-11 inline-block leading-[44px] text-center rounded-full bg-[#d6d6c2] lg:bg-[#e9e9e1]"><i class="fa-sharp fa-regular fa-house-heart text-lg"></i></a>
 			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a href="/why" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Why</a>
 				<a href="/alliance" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Alliance</a>
-				<a href="/portfolio" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Portfolio</a></div>
+				<a href="/co-creation" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Co-creation</a></div>
 			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
 				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
 
@@ -107,7 +108,7 @@
 			
 			<script>
 				{
-					__sveltekit_12um2d5 = {
+					__sveltekit_16wxpzn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -117,8 +118,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.eadc6beb.js"),
-						import("./_app/immutable/entry/app.58fa070e.js")
+						import("./_app/immutable/entry/start.bbf8a3f5.js"),
+						import("./_app/immutable/entry/app.0e7319be.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
