--- a/why.html
+++ b/why.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.a9622138.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.eadc6beb.js">
+		<link href="./_app/immutable/assets/0.88b7e876.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bbf8a3f5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.2ed5b141.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.08b20048.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.58fa070e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.363c6edd.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/19.f6dca9a3.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3eaefac.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0e7319be.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.9c19034e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/18.4e3bacb3.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -22,18 +22,23 @@
 <div id="isMain" class="loading"><header class="px-4 py-2 md:px-6 fixed bg-[#e9e9e1] w-full z-50 shadow-sm"><nav class="flex lg:justify-center"><div class="self-center lg:ml-6 flex justify-between w-full lg:inline-block lg:w-auto menunav--hidden" id="menunav"><a href="/" class="hover:text-[#817c52] w-11 h-11 inline-block leading-[44px] text-center rounded-full bg-[#d6d6c2] lg:bg-[#e9e9e1]"><i class="fa-sharp fa-regular fa-house-heart text-lg"></i></a>
 			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a href="/why" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Why</a>
 				<a href="/alliance" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Alliance</a>
-				<a href="/portfolio" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Portfolio</a></div>
+				<a href="/co-creation" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Co-creation</a></div>
 			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
 				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
 
-	<section class="content"><section class="px-4 pt-20 max-w-4xl mx-auto"><h1 class="md:text-center text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mt-9 mb-4 lg:mt-16 lg:mb-11">Our Why</h1>
-</section></section></div>
+	<section class="content"><article class="py-14 md:py-16 lg:py-24"><div class="max-w-4xl mx-auto px-4"><h1 class="md:text-center text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mt-9 mb-4 lg:mt-16 lg:mb-11">Our Why</h1>
+		<p class="md:text-center lg:text-xl text-slate-500 worksans uppercase tracking-wider">We&#39;re stronger together
+		</p>
+
+		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal"><strong class="italic">&quot;Because we understand you, the entrepreneur. We know the path isn&#39;t always clear, so we&#39;re here to help you channel your energy and natural skills in a way that makes sense for you. Our guidance is all about helping you move forward with clarity and purpose.&quot;</strong></p>
+
+			<p class="my-4 md:my-6 lg:my-9 leading-normal">Brought together by the EU Fellowship program The Break 2023. The experience was so impactful we decided to build and expand on the opportunity of our connections and build a creative business acceleration program based on that experience. Our mission is to support conscious entrepreneurs to accelerate their businesses in a joyful and healthy way.</p></div></div></article></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_12um2d5 = {
+					__sveltekit_16wxpzn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -43,11 +48,11 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.eadc6beb.js"),
-						import("./_app/immutable/entry/app.58fa070e.js")
+						import("./_app/immutable/entry/start.bbf8a3f5.js"),
+						import("./_app/immutable/entry/app.0e7319be.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 19],
+							node_ids: [0, 18],
 							data,
 							form: null,
 							error: null
