--- a/team/savvoula.html
+++ b/team/savvoula.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.88b7e876.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.bbf8a3f5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.59467f81.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.2ed5b141.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a3eaefac.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.0e7319be.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.68a8b786.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.af5781a9.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.9c19034e.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/13.4e880fae.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d04a396f.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_16wxpzn = {
+					__sveltekit_adqm6 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -71,8 +71,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.bbf8a3f5.js"),
-						import("../_app/immutable/entry/app.0e7319be.js")
+						import("../_app/immutable/entry/start.59467f81.js"),
+						import("../_app/immutable/entry/app.af5781a9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 13],
