--- a/why.html
+++ b/why.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.88b7e876.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bbf8a3f5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.59467f81.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.2ed5b141.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3eaefac.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0e7319be.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.68a8b786.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.af5781a9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.9c19034e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/18.4e3bacb3.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/18.2ce630f9.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -32,13 +32,20 @@
 
 		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal"><strong class="italic">&quot;Because we understand you, the entrepreneur. We know the path isn&#39;t always clear, so we&#39;re here to help you channel your energy and natural skills in a way that makes sense for you. Our guidance is all about helping you move forward with clarity and purpose.&quot;</strong></p>
 
-			<p class="my-4 md:my-6 lg:my-9 leading-normal">Brought together by the EU Fellowship program The Break 2023. The experience was so impactful we decided to build and expand on the opportunity of our connections and build a creative business acceleration program based on that experience. Our mission is to support conscious entrepreneurs to accelerate their businesses in a joyful and healthy way.</p></div></div></article></section></div>
+			<p class="my-4 md:my-6 lg:my-9 leading-normal">Brought together by the EU Fellowship program The Break 2023. The experience was so impactful we decided to build and expand on the opportunity of our connections and build a creative business acceleration program based on that experience. Our mission is to support conscious entrepreneurs to accelerate their businesses in a joyful and healthy way.</p></div></div></article>
+
+<article class="py-14 md:py-16 lg:py-24 bg-[#e9e9e1] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide mb-4 lg:mb-11">Our Alliance</h1>
+
+		<p class="md:text-center text-md md:text-xl lg:text-2xl !leading-normal">The HC15 is a <strong class="italic">European-based alliance of 13 diverse and accomplished women entrepreneurs</strong> who came together with the shared goals of collaboration, empowerment and support.
+		</p>
+
+		<p class="mt-4 lg:mt-9 text-center"><a href="/alliance" class="button">Learn more</a></p></div></article></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_16wxpzn = {
+					__sveltekit_adqm6 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -48,8 +55,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bbf8a3f5.js"),
-						import("./_app/immutable/entry/app.0e7319be.js")
+						import("./_app/immutable/entry/start.59467f81.js"),
+						import("./_app/immutable/entry/app.af5781a9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 18],
