--- a/team/katarzyna.html
+++ b/team/katarzyna.html
@@ -5,14 +5,15 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.88b7e876.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.59467f81.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.2ed5b141.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.68a8b786.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.af5781a9.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.9c19034e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/9.29750f46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d04a396f.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link href="../_app/immutable/assets/0.6136822f.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.029032be.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b6662afc.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6efd8a72.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.8a5c87b4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.a6aecd88.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/9.7cf2f684.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -21,9 +22,9 @@
 
 
 <div id="isMain" class="loading"><header class="px-4 py-2 md:px-6 fixed bg-[#e9e9e1] w-full z-50 shadow-sm"><nav class="flex lg:justify-center"><div class="self-center lg:ml-6 flex justify-between w-full lg:inline-block lg:w-auto menunav--hidden" id="menunav"><a href="/" class="hover:text-[#817c52] w-11 h-11 inline-block leading-[44px] text-center rounded-full bg-[#d6d6c2] lg:bg-[#e9e9e1]"><i class="fa-sharp fa-regular fa-house-heart text-lg"></i></a>
-			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a href="/why" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Why</a>
-				<a href="/alliance" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Our Alliance</a>
-				<a href="/co-creation" class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0">Co-creation</a></div>
+			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0" href="/why">Our Why</a>
+				<a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0" href="/alliance">Our Alliance</a>
+				<a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0" href="/co-creation">Co-creation</a></div>
 			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
 				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
 
@@ -59,7 +60,7 @@
 			
 			<script>
 				{
-					__sveltekit_adqm6 = {
+					__sveltekit_mdq0dy = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -69,8 +70,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.59467f81.js"),
-						import("../_app/immutable/entry/app.af5781a9.js")
+						import("../_app/immutable/entry/start.029032be.js"),
+						import("../_app/immutable/entry/app.6efd8a72.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 9],
