--- a/team/rita.html
+++ b/team/rita.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.029032be.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.49b7cc38.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b6662afc.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.6efd8a72.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.8a5c87b4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.a6aecd88.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/12.fc8784d8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.07ab294a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.bf9ac78e.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.4b4c2a86.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.49d59e25.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/12.4dedbf1c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -39,7 +39,10 @@
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/ritajanuario-98575b8a/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Experienced and resilient business consultant and project manager with over 7 years&#39; success in leading cross-functional teams, delivering innovative products and building creative marketing and communications initiatives. Empathetic leader with a strong track record of building positive team dynamics and fostering a collaborative working environment.
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">Experienced and resilient business consultant and project manager with over 7 years&#39; success in leading cross-functional teams, delivering innovative products and building creative marketing and communications initiatives.
+				</p>
+
+				<p>Empathetic leader with a strong track record of building positive team dynamics and fostering a collaborative working environment. Skilled at balancing project requirements within budget and exceeding expectations. Always looking for a challenge to drive growth and success through an innovative culture and strategy. Excellent communicator, empathetic, creative thinker, high risk taker, tenacious in solving problems.
 				</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
@@ -61,7 +64,7 @@
 			
 			<script>
 				{
-					__sveltekit_mdq0dy = {
+					__sveltekit_t9j28p = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -71,8 +74,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.029032be.js"),
-						import("../_app/immutable/entry/app.6efd8a72.js")
+						import("../_app/immutable/entry/start.49b7cc38.js"),
+						import("../_app/immutable/entry/app.bf9ac78e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 12],
