--- a/team/alvie.html
+++ b/team/alvie.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.49b7cc38.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.2f1a257b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.07ab294a.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.bf9ac78e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.4b4c2a86.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.49d59e25.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/5.7d2e668e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7e322f65.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.7e31e75d.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.27588bee.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.74c4b15f.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/5.7b3a5766.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -55,6 +55,9 @@
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Value proposition development
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">People management
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Organisational development
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Self-awareness and personal development
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Facilitator
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Vision navigation
 				</li></ul>
 		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
@@ -62,7 +65,7 @@
 			
 			<script>
 				{
-					__sveltekit_t9j28p = {
+					__sveltekit_rlljug = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -72,8 +75,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.49b7cc38.js"),
-						import("../_app/immutable/entry/app.bf9ac78e.js")
+						import("../_app/immutable/entry/start.2f1a257b.js"),
+						import("../_app/immutable/entry/app.7e31e75d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
