--- a/team/rita.html
+++ b/team/rita.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.49b7cc38.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.2f1a257b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.07ab294a.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.bf9ac78e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.4b4c2a86.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.49d59e25.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7e322f65.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.7e31e75d.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.27588bee.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.74c4b15f.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/12.4dedbf1c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -64,7 +64,7 @@
 			
 			<script>
 				{
-					__sveltekit_t9j28p = {
+					__sveltekit_rlljug = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -74,8 +74,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.49b7cc38.js"),
-						import("../_app/immutable/entry/app.bf9ac78e.js")
+						import("../_app/immutable/entry/start.2f1a257b.js"),
+						import("../_app/immutable/entry/app.7e31e75d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 12],
