--- a/team/alvie.html
+++ b/team/alvie.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.2f1a257b.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0c3d07c6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7e322f65.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.7e31e75d.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.27588bee.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.74c4b15f.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/5.7b3a5766.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.737437f6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.8de9e130.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.e9bfbf4a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7645813d.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/5.7186da49.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -40,7 +40,9 @@
 				</li></ul></div></div>
 
 		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">&quot;In order to do anything, you must first see&quot;- Alvie</p>
-				<p>I help clients discern values, resources, and challenges helping them navigate their business journey.
+				<p class="mb-4 lg:mb-6">Alvie is a business professional with extensive international corporate experience. She is creative, adaptable, and efficient and has worked in several different industries in Australia, Europe, and North America. Her experience has her working with leadership to help identify or expand on vision, enhance, and build on existing strengths, and build cohesive teams.
+				</p>
+				<p>The diversity in her experience has allowed her to adapt to different situations, cultures, and industries.
 				</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
@@ -65,7 +67,7 @@
 			
 			<script>
 				{
-					__sveltekit_rlljug = {
+					__sveltekit_1lkha0i = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -75,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.2f1a257b.js"),
-						import("../_app/immutable/entry/app.7e31e75d.js")
+						import("../_app/immutable/entry/start.0c3d07c6.js"),
+						import("../_app/immutable/entry/app.8de9e130.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
