--- a/team/shweta.html
+++ b/team/shweta.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.2f1a257b.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0c3d07c6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7e322f65.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.7e31e75d.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.27588bee.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.74c4b15f.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.737437f6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.8de9e130.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.e9bfbf4a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7645813d.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/15.4953bb2a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_rlljug = {
+					__sveltekit_1lkha0i = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -71,8 +71,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.2f1a257b.js"),
-						import("../_app/immutable/entry/app.7e31e75d.js")
+						import("../_app/immutable/entry/start.0c3d07c6.js"),
+						import("../_app/immutable/entry/app.8de9e130.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 15],
