--- a/co-creation.html
+++ b/co-creation.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0c3d07c6.js">
+		<link href="./_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.b6051d53.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.737437f6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8de9e130.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.e9bfbf4a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.7645813d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.588011bf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b73cd003.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ecb6ff7f.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.fd7bdf79.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.e3728584.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.b42445ce.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.7676edf5.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -24,7 +24,7 @@
 <div id="isMain" class="loading"><header class="px-4 py-2 md:px-6 fixed bg-[#e9e9e1] w-full z-50 shadow-sm"><nav class="flex lg:justify-center"><div class="self-center lg:ml-6 flex justify-between w-full lg:inline-block lg:w-auto menunav--hidden" id="menunav"><a href="/" class="hover:text-[#817c52] w-11 h-11 inline-block leading-[44px] text-center rounded-full bg-[#d6d6c2] lg:bg-[#e9e9e1]"><i class="fa-sharp fa-regular fa-house-heart text-lg"></i></a>
 			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0" href="/why">Our Why</a>
 				<a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0" href="/alliance">Our Alliance</a>
-				<a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0 relative after:block after:absolute after:w-full after:h-1.5 after:bg-white after:left-0 after:-bottom-3.5 text-[#817c52]" href="/co-creation">Co-creation</a></div>
+				<a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0 relative after:block after:absolute after:w-full after:h-1.5 after:bg-[#817c52] after:left-0 after:-bottom-[13px] text-[#817c52]" href="/co-creation">Co-creation</a></div>
 			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
 				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
 
@@ -37,26 +37,27 @@
 				<p class="my-4 md:my-6 lg:my-9 leading-normal">Our program consists of <strong class="italic">three facilitated sessions</strong> where we discover the core of your motivation, business and means to implement with Sinek&#39;s Golden Circle model as the basis. We then validate your idea and/or services, in order to provide you with a doable plan tailored upon to you and your business needs.</p></div></div></div></article>
 
 
-<article class="py-14 md:py-16 lg:py-24 bg-[#e9e9e1] overflow-x-hidden" id="threesessions"><div class="max-w-6xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide mb-4 lg:mb-11">Three sessions</h1>
+<article class="py-14 md:py-16 lg:py-24 bg-[#e9e9e1] overflow-x-hidden text-cyan-950" id="threesessions"><div class="max-w-6xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide mb-4 lg:mb-11">Three sessions</h1>
 
-		<div class="my-6 md:my-12 lg:my-16 text-center text-md md:text-xl flex flex-col lg:flex-row gap-4 lg:gap-6 flex-wrap"><div class="mx-auto w-1/2 group block relative lg:w-[calc(100%/3-16px)] rounded-lg bg-white p-4 md:p-6"><h2 class="text-xl md:text-2xl lg:text-3xl mb-4 lg:mb-6">Identifying the WHY
+		<div class="my-6 md:my-12 lg:my-16 text-center text-md md:text-xl flex flex-col lg:flex-row gap-4 lg:gap-6 flex-wrap"><div class="md:mx-auto md:w-1/2 group block relative lg:w-[calc(100%/3-16px)] rounded-lg bg-white p-4 md:p-6"><h2 class="text-left md:text-center text-xl md:text-2xl mb-4 lg:mb-6">Identifying the WHY
 				</h2>
 				<ul class="text-left"><li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Motivations and Vision</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Passions</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Current obstructions</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> What you bring to the table</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Your expertise</li></ul></div>
-			<div class="mx-auto w-1/2 group block relative lg:w-[calc(100%/3-16px)] rounded-lg bg-white p-4 md:p-6"><h2 class="text-xl md:text-2xl lg:text-3xl mb-4 lg:mb-6">Finding the HOW
+			<div class="md:mx-auto md:w-1/2 group block relative lg:w-[calc(100%/3-16px)] rounded-lg bg-white p-4 md:p-6"><h2 class="text-left md:text-center text-xl md:text-2xl mb-4 lg:mb-6">Finding the HOW
 				</h2>
 				<ul class="text-left"><li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> How to get there</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Strategy</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> What you want to do</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Conceptualization</li></ul></div>
-			<div class="mx-auto w-1/2 group block relative lg:w-[calc(100%/3-16px)] rounded-lg bg-white p-4 md:p-6"><h2 class="text-xl md:text-2xl lg:text-3xl mb-4 lg:mb-6">Making the WHAT
+			<div class="md:mx-auto md:w-1/2 group block relative lg:w-[calc(100%/3-16px)] rounded-lg bg-white p-4 md:p-6"><h2 class="text-left md:text-center text-xl md:text-2xl mb-4 lg:mb-6">Making the WHAT
 				</h2>
 				<ul class="text-left"><li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Let&#39;s make THE plan</li>
 					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Delivery</li>
-					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Business functions, measurables</li></ul></div></div>
+					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Business functions</li>
+					<li class="mb-1.5"><i class="fa-regular fa-stop fa-lg mr-2"></i> Measurables</li></ul></div></div>
 
 		<p class="md:text-center text-md md:text-xl lg:text-2xl !leading-normal"><strong class="italic">Each stage is led by experienced entrepreneurs</strong>. The collaborative process is a unique flow of interchanging experts that cover a range of areas. Co-Creation sessions are set up in stages depending on where the individual is in their business, this will depend on the application filled out by the individuals.
 		</p></div></article>
@@ -135,7 +136,7 @@
 			
 			<script>
 				{
-					__sveltekit_1lkha0i = {
+					__sveltekit_zodx92 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -145,8 +146,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0c3d07c6.js"),
-						import("./_app/immutable/entry/app.8de9e130.js")
+						import("./_app/immutable/entry/start.b6051d53.js"),
+						import("./_app/immutable/entry/app.ecb6ff7f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
