--- a/alliance.html
+++ b/alliance.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0c3d07c6.js">
+		<link href="./_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.b6051d53.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.737437f6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8de9e130.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.e9bfbf4a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.7645813d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b73cd003.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ecb6ff7f.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.fd7bdf79.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.e3728584.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.458811fb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.7676edf5.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -23,7 +23,7 @@
 
 <div id="isMain" class="loading"><header class="px-4 py-2 md:px-6 fixed bg-[#e9e9e1] w-full z-50 shadow-sm"><nav class="flex lg:justify-center"><div class="self-center lg:ml-6 flex justify-between w-full lg:inline-block lg:w-auto menunav--hidden" id="menunav"><a href="/" class="hover:text-[#817c52] w-11 h-11 inline-block leading-[44px] text-center rounded-full bg-[#d6d6c2] lg:bg-[#e9e9e1]"><i class="fa-sharp fa-regular fa-house-heart text-lg"></i></a>
 			<div class="bg-[#e9e9e1] lg:inline-block menunav__target"><a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0" href="/why">Our Why</a>
-				<a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0 relative after:block after:absolute after:w-full after:h-1.5 after:bg-white after:left-0 after:-bottom-3.5 text-[#817c52]" href="/alliance">Our Alliance</a>
+				<a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0 relative after:block after:absolute after:w-full after:h-1.5 after:bg-[#817c52] after:left-0 after:-bottom-[13px] text-[#817c52]" href="/alliance">Our Alliance</a>
 				<a class="border-t border-[#d6d6c2] px-4 py-2 hover:text-[#817c52] uppercase tracking-wide lg:border-0" href="/co-creation">Co-creation</a></div>
 			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
 				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
@@ -109,7 +109,7 @@
 			
 			<script>
 				{
-					__sveltekit_1lkha0i = {
+					__sveltekit_zodx92 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -119,8 +119,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0c3d07c6.js"),
-						import("./_app/immutable/entry/app.8de9e130.js")
+						import("./_app/immutable/entry/start.b6051d53.js"),
+						import("./_app/immutable/entry/app.ecb6ff7f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
