--- a/team/jana.html
+++ b/team/jana.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.0c3d07c6.js">
+		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.737437f6.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.8de9e130.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.e9bfbf4a.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7645813d.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/7.5aaa2663.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/7.bd31819e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -36,9 +36,9 @@
 
 	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-3 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Munich, Germany</span>
 
-		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/ivanasetiawan/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
-				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.venopi.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Venopi</a>
-				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://ivanasetiawan.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Personal website</a>
+		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/jana-sieling-60a1a6204/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/finanzfriede/" target="_blank"><i class="fa-light fa-link mr-2"></i> Instagram</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://finanzfriede.de/zenfinance/" target="_blank"><i class="fa-light fa-link mr-2"></i> Website</a>
 				</li></ul></div></div>
 
 		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Jana is a finance professional with over 8 years of experience in strategic consulting within the banking sector in Germany. Her dedication to empowering women is evident through her mission-driven startup where she seeks to support female entrepreneurs to thrive financially. With significant roles across various banks, Jana combines personal and business finance knowledge. This unique blend, coupled with her passion for investing, informs her empathetic leadership, effective mentoring, and growth-focused approach.
@@ -52,9 +52,14 @@
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
 		</h1>
 
-		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: German, English
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Startup Finance
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Personal Finance
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Financial Industry
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Business Consulting
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Project Management
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Personal Finances
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Business Finance
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Native German
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent English
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent Spanish
 				</li></ul>
 		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
@@ -62,7 +67,7 @@
 			
 			<script>
 				{
-					__sveltekit_1lkha0i = {
+					__sveltekit_zodx92 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -72,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.0c3d07c6.js"),
-						import("../_app/immutable/entry/app.8de9e130.js")
+						import("../_app/immutable/entry/start.b6051d53.js"),
+						import("../_app/immutable/entry/app.ecb6ff7f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
