--- a/team/zsuzsanna.html
+++ b/team/zsuzsanna.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6136822f.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.0c3d07c6.js">
+		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.737437f6.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.8de9e130.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.e9bfbf4a.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7645813d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/17.52ebcd4e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -66,7 +66,7 @@
 			
 			<script>
 				{
-					__sveltekit_1lkha0i = {
+					__sveltekit_zodx92 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -76,8 +76,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.0c3d07c6.js"),
-						import("../_app/immutable/entry/app.8de9e130.js")
+						import("../_app/immutable/entry/start.b6051d53.js"),
+						import("../_app/immutable/entry/app.ecb6ff7f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 17],
