--- a/co-creation.html
+++ b/co-creation.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.b6051d53.js">
+		<link href="./_app/immutable/assets/0.3567f620.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.7bf15511.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b73cd003.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ecb6ff7f.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.fd7bdf79.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.e3728584.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.b42445ce.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.7676edf5.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7c9349ec.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.db244443.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.7055da0d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.78b76fb5.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.cb4c155e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.f044a65f.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -76,7 +76,7 @@
 		<span class="block text-base italic">Founder &amp; Software Engineer</span></div>
 	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
-			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/jana"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/jana.jpg" alt="Jana Sieling" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
+			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/jana"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/jana-1.jpg" alt="Jana Sieling" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Jana Sieling</span>
 		<span class="block text-base italic">Financial Consultant</span></div>
 	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
@@ -93,7 +93,7 @@
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/madelin"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/madelin.jpg" alt="Madelin Winkler" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Madelin Winkler</span>
-		<span class="block text-base italic">Digital Nomad - SEO &amp; PR</span></div>
+		<span class="block text-base italic">Founder of Domega Consulting (Digital Marketing)</span></div>
 	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/rita"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/rita.jpg" alt="Rita Januário" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
@@ -136,7 +136,7 @@
 			
 			<script>
 				{
-					__sveltekit_zodx92 = {
+					__sveltekit_eof864 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -146,8 +146,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.b6051d53.js"),
-						import("./_app/immutable/entry/app.ecb6ff7f.js")
+						import("./_app/immutable/entry/start.7bf15511.js"),
+						import("./_app/immutable/entry/app.db244443.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
