--- a/team/ivana.html
+++ b/team/ivana.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
+		<link href="../_app/immutable/assets/0.3567f620.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.7bf15511.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/6.32060083.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7c9349ec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.db244443.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7055da0d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.78b76fb5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/6.78692be5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonProjects.994b48ac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -35,14 +35,17 @@
 
 	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Ivana <span class="italic text-[#fca806]">Setiawan</span></h1></div></div>
 
-	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-3 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Amsterdam, Netherlands</span>
+	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Amsterdam, Netherlands</span>
+
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:ivana@venopi.com"><i class="fa-light fa-at mr-2"></i> Email
+		</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/ivanasetiawan/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
-				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.venopi.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Venopi</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.venopi.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Project: Venopi</a>
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://ivanasetiawan.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Personal website</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>I&#39;m a self-taught Software Engineer since 2009, with a particular focus on front-end work. I love JavaScript, dabble in Python, and am enthusiastic about Web3 technology. I&#39;m also keen on UX Design. Right now, I&#39;m dedicated to my ongoing project, <a href="https://www.venopi.com/" target="_blank">Venopi</a>.
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Ivana is a self-taught Software Engineer who has been coding since 2009, mainly in front-end development. They&#39;re enthusiastic about JavaScript, Python, and UX Design, and intrigued by the potential of Web3 technology.
 				</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
@@ -63,13 +66,19 @@
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
 		</h1>
 
-		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: Indonesian, English
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Frontend tech stack
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Frontend tech stack
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Javascript frameworks &amp; libraries
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">React / Vue3 / Svelte
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Nuxtjs / SvelteKit
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Git
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Tailwind
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Javascript frameworks &amp; libraries
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Segment (Data driven)
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">UX Design
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">WordPress
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Native Indonesian
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent English
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Basic Dutch
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Basic Swedish
 				</li></ul>
 		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
@@ -77,7 +86,7 @@
 			
 			<script>
 				{
-					__sveltekit_zodx92 = {
+					__sveltekit_eof864 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -87,8 +96,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b6051d53.js"),
-						import("../_app/immutable/entry/app.ecb6ff7f.js")
+						import("../_app/immutable/entry/start.7bf15511.js"),
+						import("../_app/immutable/entry/app.db244443.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
