--- a/team/jana.html
+++ b/team/jana.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
+		<link href="../_app/immutable/assets/0.3567f620.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.7bf15511.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/7.bd31819e.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7c9349ec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.db244443.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7055da0d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.78b76fb5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/7.f019b494.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -30,33 +30,41 @@
 
 	<section class="content"><article class="pt-24 pb-9 lg:pb-16"><div class="px-4 max-w-4xl mx-auto worksans text-sm"><a href="/alliance#theteam"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div>
 
-	<div class="md:mt-6 lg:mt-16 px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto mb-6 lg:mb-10"><div class="w-24 h-24 mx-auto lg:w-1/3 lg:h-64 relative"><div class="w-full h-full absolute overflow-hidden rounded-md"><img src="/images/jana.jpg" alt="Jana Sieling" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div></div>
+	<div class="md:mt-6 lg:mt-16 px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto mb-6 lg:mb-10"><div class="w-24 h-24 mx-auto lg:w-1/3 lg:h-64 relative"><div class="w-full h-full absolute overflow-hidden rounded-md"><img src="/images/jana-1.jpg" alt="Jana Sieling" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div></div>
 
 	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Jana <span class="italic text-[#fca806]">Sieling</span></h1></div></div>
 
-	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-3 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Munich, Germany</span>
+	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Munich, Germany</span>
+
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:zen@finanzfriede.de"><i class="fa-light fa-at mr-2"></i> Email
+		</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/jana-sieling-60a1a6204/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/finanzfriede/" target="_blank"><i class="fa-light fa-link mr-2"></i> Instagram</a>
-				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://finanzfriede.de/zenfinance/" target="_blank"><i class="fa-light fa-link mr-2"></i> Website</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://finanzfriede.de/zenfinance/" target="_blank"><i class="fa-light fa-link mr-2"></i> Zenfinance</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Jana is a finance professional with over 8 years of experience in strategic consulting within the banking sector in Germany. Her dedication to empowering women is evident through her mission-driven startup where she seeks to support female entrepreneurs to thrive financially. With significant roles across various banks, Jana combines personal and business finance knowledge. This unique blend, coupled with her passion for investing, informs her empathetic leadership, effective mentoring, and growth-focused approach.
-				</p></div>
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">Jana is a finance consultant with over 8 years of experience in the banking sector in Germany. Her dedication to empowering women is evident through her mission-driven startup where she seeks to support female entrepreneurs to thrive financially. Jana combines personal and business finance knowledge from retirement plans to cash flow management. She loves sharing her knowledge to empower women in workshops and 1:1 mentoring sessions and is passionate about speaking in female networks to encourage the participants to talk about money.
+				</p>
+				<p>“Financial Feminism is the understanding of the power that money holds to transform the world in a way that creates a more equitable place for all of humanity.” Rebecca Walker</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
 	</p>
-	<div class="my-4 leading-relaxed italic text-slate-500 text-base"><p>Reorganise and improve your finance significantly.
-				</p></div></div></div></div></article>
+	<div class="my-4 leading-relaxed italic text-slate-500 text-base"><ul><li class="mb-4 lg:mb-6">Understanding your money psychology: what are your learnt behaviors you grew up with and how do they control you today in personal and business decisions?</li>
+					<li class="mb-4 lg:mb-6">Setting up a financial structure and routine that actually works for you - including personal and business finances</li>
+					<li class="mb-4 lg:mb-6">Essential financial literacy and help you decide where to get support</li></ul></div></div></div></div></article>
 
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
 		</h1>
 
-		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Financial Industry
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Money Psychology
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Cash Flow Management
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Retirement in Germany
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Financial Literacy
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Business Consulting
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Project Management
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Personal Finances
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Business Finance
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Financial Industry
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Native German
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent English
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent Spanish
@@ -67,7 +75,7 @@
 			
 			<script>
 				{
-					__sveltekit_zodx92 = {
+					__sveltekit_eof864 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +85,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b6051d53.js"),
-						import("../_app/immutable/entry/app.ecb6ff7f.js")
+						import("../_app/immutable/entry/start.7bf15511.js"),
+						import("../_app/immutable/entry/app.db244443.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
