--- a/team/justyna.html
+++ b/team/justyna.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
+		<link href="../_app/immutable/assets/0.3567f620.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.7bf15511.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/8.acb0db8f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7c9349ec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.db244443.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7055da0d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.78b76fb5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/8.36093738.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonProjects.994b48ac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -35,35 +35,44 @@
 
 	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Justyna <span class="italic text-[#fca806]">Kawa</span></h1></div></div>
 
-	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-3 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Munich, Germany</span>
+	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Munich, Germany</span>
+
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:kawa.justyna@gmail.com"><i class="fa-light fa-at mr-2"></i> Email
+		</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/justyna-kawa/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/coffee.revival/" target="_blank"><i class="fa-light fa-link mr-2"></i> Instagram</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/peakava_/" target="_blank"><i class="fa-light fa-link mr-2"></i> Peakava IG</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>With over 16 years of impactful leadership in the Fashion and Retail Industry, my expertise lies in brand and product development, strategic purchasing, and consulting. I&#39;ve negotiated across diverse markets, driving profitability and strategic alignment. Additionally, my experience extends to consulting startups on business plans and strategies. My objectives are always clear: achieving targeted margins, sustainable profitability, and ensuring alignment with strategic goals.
-				</p></div>
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">With a rich history of 16+ years in influential leadership within the Fashion and Retail Industry, Justyna’s core competencies revolve around brand and product development, strategic procurement, and consultancy services. Her career has been marked by successful negotiations across a wide spectrum of markets, consistently delivering enhanced profitability and strategic cohesion.
+				</p>
+				<p>Moreover, she brings a wealth of experience in guiding startups through the intricacies of business planning and strategy development. Justyna’s unwavering focus is on achieving specific margin targets, fostering sustainable profitability, and aligning business strategies seamlessly with overarching strategic objectives</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
 	</p>
-	<div class="my-4 leading-relaxed italic text-slate-500 text-base"><p>Organisational development, Business development and international sales.
+	<div class="my-4 leading-relaxed italic text-slate-500 text-base"><p>Business Plans, Business Development, Strategy Planning: brand, product, marketing, procurement, Negotiations, Brainstorming Sessions, Out-of-the box Solutions, VR and AR projects.
 				</p></div></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">Projects
 	</p>
 
-	<ul class="text-base worksans my-4 flex"><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/peakava_/" target="_blank"><i class="fa-light fa-link mr-2"></i> Peakava</a>
+	<ul class="text-base worksans my-4 flex"><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="http://www.peakava.pl" target="_blank"><i class="fa-light fa-link mr-2"></i> Peakava</a>
 			</li></ul></div></div></div></article>
 
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
 		</h1>
 
-		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: Polish, English, German
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Product development
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Strategic purchasing
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Negotiation
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Business plan
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Strategic alignment
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Driving profitability
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Brand Strategy
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Business Plan
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Team Management
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Product Development
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Sourcing
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Strategic Purchasing
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Negotitation
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Native Polish
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent English
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Advance German
 				</li></ul>
 		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
@@ -71,7 +80,7 @@
 			
 			<script>
 				{
-					__sveltekit_zodx92 = {
+					__sveltekit_eof864 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -81,8 +90,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b6051d53.js"),
-						import("../_app/immutable/entry/app.ecb6ff7f.js")
+						import("../_app/immutable/entry/start.7bf15511.js"),
+						import("../_app/immutable/entry/app.db244443.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
