--- a/team/katarzyna.html
+++ b/team/katarzyna.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
+		<link href="../_app/immutable/assets/0.3567f620.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.7bf15511.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/9.7cf2f684.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7c9349ec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.db244443.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7055da0d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.78b76fb5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/9.c47f0272.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -34,25 +34,37 @@
 
 	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Katarzyna <span class="italic text-[#fca806]">Bazylczyk</span></h1></div></div>
 
-	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-3 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Poland</span>
+	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Poland</span>
+
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:katarzyna.bazylczyk@gmail.com"><i class="fa-light fa-at mr-2"></i> Email
+		</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/katarzynabazylczyk/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/venusand.co/" target="_blank"><i class="fa-light fa-link mr-2"></i> Instagram</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://venusand.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Venus &amp; Co</a>
 				</li></ul></div></div>
 
 		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Design specialist focused on crafting digital solutions for Subject Matter Experts. For the last 10 years she has created digital products for biotechnology and private banking sector. The most important projects include global solutions for Roche and Genentech, such as products for Medical Science Liaison, innovative solutions for employees of diagnostic laboratories and NHS in UK. Last 4 years, for the purposes of Citi Private Bank Innovation, she was responsible for design processes in projects on prospecting new UHNW clients, testing and comparing NLP models, investing in art (NFT) and conversational interfaces. Currently, she is advising on design strategy, solutions in initiatives and exploring VR tools within aviation and art investment sectors.</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
 	</p>
-	<div class="my-4 leading-relaxed italic text-slate-500 text-base"><p>UX Design, Product design, User testing.
+	<div class="my-4 leading-relaxed italic text-slate-500 text-base"><p>Product Design (UX research, UX / UI design), Service Design, Design Management, Art Direction, Graphic design (Branding, Visual Communication, WayFinding, Print, Packaging), Industrial design (3D models)
 				</p></div></div></div></div></article>
-
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
 		</h1>
 
-		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: Polish, English, Spanish
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Product design
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">User testing
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">UX Design
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Product Design
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Service Design
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Art Direction
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Graphic design
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Adobe Cloud
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Figma
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Sketch
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Axure RP
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Rhinoceros 3D
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Blender
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">WordPress
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Spark AR
 				</li></ul>
 		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
@@ -60,7 +72,7 @@
 			
 			<script>
 				{
-					__sveltekit_zodx92 = {
+					__sveltekit_eof864 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -70,8 +82,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b6051d53.js"),
-						import("../_app/immutable/entry/app.ecb6ff7f.js")
+						import("../_app/immutable/entry/start.7bf15511.js"),
+						import("../_app/immutable/entry/app.db244443.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 9],
