--- a/team/madelin.html
+++ b/team/madelin.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
+		<link href="../_app/immutable/assets/0.3567f620.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.7bf15511.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/10.57d5cb55.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7c9349ec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.db244443.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7055da0d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.78b76fb5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/10.51750796.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -34,14 +34,17 @@
 
 	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Madelin <span class="italic text-[#fca806]">Winkler</span></h1></div></div>
 
-	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-3 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Munich, Germany</span>
+	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Munich, Germany</span>
+
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:info@madelin-winkler.com"><i class="fa-light fa-at mr-2"></i> Email
+		</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/madelinwinkler/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://domega-consulting.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Personal website</a>
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/iammadelinn/" target="_blank"><i class="fa-light fa-link mr-2"></i> Instagram</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Madelin is a SEO &amp; PR Expert and also helps entrepreneurs to explore the realm of digital nomadism. She has more then 8 years experience with CRM &amp; ERP Systems. Madelin has a high class quality (strong) network in Munich, Barcelona and Lichtenstein.</p></div>
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Madelin is a digital marketing expert specializing in SEO and Google Ads. She also helps entrepreneurs explore the realm of digital nomadism. She has more than 8 years of experience with software systems (CRM&amp;ERP) and focuses on more customer wins and better customer relationship. As a networking professional, she has been able to build an international customer base.</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
 	</p>
@@ -51,8 +54,7 @@
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
 		</h1>
 
-		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: German, English, Spanish
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Wordpress
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Wordpress
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">ChatGPT Advanced
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Neuronwriter
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">SugarCRM
@@ -61,6 +63,9 @@
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">ERP Systems
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Hubspot
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Shore
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Native German
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent English
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent Spanish
 				</li></ul>
 		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
@@ -68,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_zodx92 = {
+					__sveltekit_eof864 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -78,8 +83,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b6051d53.js"),
-						import("../_app/immutable/entry/app.ecb6ff7f.js")
+						import("../_app/immutable/entry/start.7bf15511.js"),
+						import("../_app/immutable/entry/app.db244443.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 10],
