--- a/team/raquel.html
+++ b/team/raquel.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
+		<link href="../_app/immutable/assets/0.3567f620.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.7bf15511.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7c9349ec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.db244443.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7055da0d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.78b76fb5.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/11.cf2c28ae.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -48,7 +48,7 @@
 			
 			<script>
 				{
-					__sveltekit_zodx92 = {
+					__sveltekit_eof864 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -58,8 +58,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b6051d53.js"),
-						import("../_app/immutable/entry/app.ecb6ff7f.js")
+						import("../_app/immutable/entry/start.7bf15511.js"),
+						import("../_app/immutable/entry/app.db244443.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 11],
