--- a/team/shan.html
+++ b/team/shan.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.6f23dd4a.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b6051d53.js">
+		<link href="../_app/immutable/assets/0.3567f620.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.7bf15511.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b73cd003.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ecb6ff7f.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.fd7bdf79.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e3728584.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/14.70b71e1c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.a0ba5db4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7c9349ec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.db244443.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7055da0d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.78b76fb5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/14.8895e825.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -34,7 +34,10 @@
 
 	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Shan <span class="italic text-[#fca806]">Luolin</span></h1></div></div>
 
-	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-3 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Amsterdam, Netherlands</span>
+	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Amsterdam, Netherlands</span>
+
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:email"><i class="fa-light fa-at mr-2"></i> Email
+		</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/shanluolin/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.wondersofu.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Wonders of U</a>
@@ -66,7 +69,7 @@
 			
 			<script>
 				{
-					__sveltekit_zodx92 = {
+					__sveltekit_eof864 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -76,8 +79,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b6051d53.js"),
-						import("../_app/immutable/entry/app.ecb6ff7f.js")
+						import("../_app/immutable/entry/start.7bf15511.js"),
+						import("../_app/immutable/entry/app.db244443.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 14],
